--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@
   html {
     font-size: 8px;
   }
+  .popup1,
   .popup2 {
     &__content {
       height: 70vh;
@@ -53,6 +54,7 @@
   .gnb {
     height: 10rem;
   }
+  .popup1,
   .popup2 {
     &__content {
       height: 70vh;
@@ -70,6 +72,7 @@
   .gnb {
     height: 10rem;
   }
+  .popup1,
   .popup2 {
     &__content {
       height: 70vh;
@@ -93,6 +96,7 @@
       display: inline;
     }
   }
+  .popup1,
   .popup2 {
     &__content {
       height: 60vh;
@@ -133,6 +137,7 @@
       display: inline;
     }
   }
+  .popup1,
   .popup2 {
     &__content {
       height: 50vh;
