--- a/scss/pages/_popup.scss
+++ b/scss/pages/_popup.scss
@@ -1,3 +1,4 @@
+.popup1,
 .popup2 {
   width: 100vw;
   height: 100vh;
@@ -30,11 +31,11 @@
     border-radius: 50%;
     color: $color--white;
     z-index: 1000;
-    font-size: 6rem;
+    font-size: 5rem;
     font-weight: 300;
     position: fixed;
     top: 0;
     right: 0;
-    padding-right: 1rem;
+    padding-right: 1.2rem;
   }
 }
